# FFChan

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
qml/: MainWindow.qml  Wizard.qml
src/: .qmlls.ini  Backend.cpp  Backend.h  CMakeLists.txt  Loader.cpp  Loader.h  Settings.cpp  Settings.h  SettingsBridge.cpp  SettingsBridge.h  Sysfetch.cpp  Sysfetch.h  ThemeManager.cpp  ThemeManager.h  Translator.cpp  Translator.h  icon.rc  main.cpp  qml.qrc
translations/: en.json  zh_CN.json
